cmake_minimum_required(VERSION 3.17)
project(FixedCapBiMapProject)

set(CMAKE_CXX_STANDARD 14)

add_executable(FixedCapBiMapProject
        ExtendedTest.cpp
        ExtendedTest.h
        FixedCapBiMap.cpp
        FixedCapBiMap.h
        FixedCapBiMapIterator.cpp
        FixedCapBiMapIterator.h
        ShortTest.cpp
        ShortTest.h
        ExtendedTest.h
        ExtendedTest.cpp
        App.cpp)